# ghc-lib

./: .ghci  .gitignore  .hlint.yaml  .mergify.yml  .travis.yml  CI.hs  CODE_OF_CONDUCT.md  COPYRIGHT  README.md  appveyor.yml  azure-pipelines.yml  dw.sh  ghc-lib-gen.cabal  ghc-lib-stack-matrix-build-test.sh  hie.yaml  sniff.sh  stack-901.yaml  stack-exact.yaml  stack.yaml  travis.sh
.github/: CODEOWNERS
.github/workflows/: ghc-9.12.1-ghc-9.10.1.yml  ghc-9.12.2-ghc-9.10.1.yml  ghc-9.12.2-ghc-9.10.2.yml  ghc-9.14.1-ghc-9.12.1.yml  ghc-9.8.4-ghc-9.6.5.yml  ghc-9.8.4-ghc-9.6.7.yml  ghc-lib-da-ghc-8.4.3.yml  ghc-lib-ghc-8.10.1-8.8.1.yml  ghc-lib-ghc-9.0.2-ghc-8.10.7.yml  ghc-lib-ghc-9.10.0-ghc-9.8.2.yml  ghc-lib-ghc-9.10.1-ghc-9.8.2.yml  ghc-lib-ghc-9.2.8-ghc-8.10.7.yml  ghc-lib-ghc-9.4.8-ghc-9.0.2.yml  ghc-lib-ghc-9.6.6-ghc-9.4.8.yml  ghc-lib-ghc-9.6.7-ghc-9.4.8.yml  ghc-lib-ghc-9.8.2-ghc-9.6.5.yml  ghc-lib-ghc-HEAD-ghc-9.10.1.yml  ghc-lib-ghc-HEAD-ghc-9.12.1.yml  ghc-lib-ghc-master-ghc-9.10.1.yml  ghc-lib-ghc-master-ghc-9.12.1.yml  ghc-lib-runhaskell-ghc-9.10.1.yml  ghc-lib-runhaskell-ghc-9.6.5.yml  hlint-check.yml  ormolu-check.yml
examples/ghc-lib-test-mini-compile/: ghc-lib-test-mini-compile.cabal
examples/ghc-lib-test-mini-compile/src/: Main.hs
examples/ghc-lib-test-mini-compile/test/: Main.hs  MiniCompileTestGhcInternalPrim.hs
examples/ghc-lib-test-mini-compile/test/GHC/Internal/: Prim.hs
examples/ghc-lib-test-mini-hlint/: LICENSE  ghc-lib-test-mini-hlint.cabal
examples/ghc-lib-test-mini-hlint/src/: Main.hs
examples/ghc-lib-test-mini-hlint/test/: Main.hs  MiniHlintTest.expect  MiniHlintTest.hs  MiniHlintTest_fail_unknown_pragma.hs  MiniHlintTest_fatal_error-ghc-master.expect  MiniHlintTest_fatal_error.expect
examples/ghc-lib-test-utils/: ghc-lib-test-utils.cabal
examples/ghc-lib-test-utils/src/: TestUtils.hs
examples/mini-compile/: .ghci  mini-compile.cabal
examples/mini-compile/src/: Main.hs  Main_flymake.hs
examples/mini-compile/test/: MiniCompileTest.hs
examples/mini-hlint/: mini-hlint.cabal
examples/mini-hlint/src/: Main.hs
examples/mini-hlint/test/: Main.hs  MiniHLintTest_fail_unknown_pragma.hs  MiniHLintTest_respect_dynamic_pragma.hs  MiniHlintTest.hs  MiniHlintTest_error_handling.hs  MiniHlintTest_fail_unknown_pragma.expect  MiniHlintTest_fatal_error.hs  MiniHlintTest_non_fatal_error-ghc-master.expect  MiniHlintTest_non_fatal_error.expect  MiniHlintTest_non_fatal_error.hs
examples/strip-locs/: strip-locs.cabal
examples/strip-locs/src/: Main.hs
examples/test-utils/: test-utils.cabal
examples/test-utils/src/: TestUtils.hs
ghc-lib-gen/: ChangeLog.md  LICENSE  Setup.hs  ghc-lib-gen.cabal
ghc-lib-gen/ghc-lib-parser/ghc-8.10/: Main.hs
ghc-lib-gen/ghc-lib-parser/ghc-8.8/: Main.hs
ghc-lib-gen/ghc-lib-parser/ghc-9.0/: Main.hs
ghc-lib-gen/ghc-lib-parser/ghc-9.2/: Main.hs
ghc-lib-gen/ghc-lib-parser/ghc-9.4/: Main.hs
ghc-lib-gen/ghc-lib-parser/ghc-9.6/: Main.hs
ghc-lib-gen/ghc-lib-parser/ghc-9.8/: Main.hs
ghc-lib-gen/ghc-lib/ghc-9.8/: Main.hs
ghc-lib-gen/src/: #Main.hs#  .#Main.hs  Ghclibgen.hs  GhclibgenFlavor.hs  GhclibgenOpts.hs  Main.hs
infra/: infra.tf
patches/: 18a7d03d46706d2217235d26a72e6f1e82c62192-GHC_Driver_Make_hs.patch  432c736c19446a011fca1f9485c67761c991bd42-GHC_Driver_Make_hs.patch  4d29ecdfcc79ad663e066d9f7d6d17b64c8c6c41-GHC_Driver_Make_hs.patch  4d356ea3049b357b80f82961db076a3e5e8edf6a-GHC_Driver_Make_hs.patch  5c8731244bc13a3d813d2a4d53b3188b28dc835-GHC_Driver_MakeSem_hs.patch  5c8731244bc13a3d813d2a4d53b3188b28dc835-GHC_Driver_Make_hs.patch  5c8731244bc13a3d813d2a4d53b3188b28dc835-GHC_Driver_Pipeline_LogQueue_hs.patch  5c8731244bc13a3d813d2a4d53b3188b28dc835-GHC_Driver_Session_hs.patch  5c8731244bc13a3d813d2a4d53b3188b28dc835-ghc_cabal_in.patch  983ce55815f2dd57f84ee86eee97febf7d80b470-libraries_template-haskell_Language_Haskell_TH_Syntax_hs.patch  9edcb1fb02d799acd4a7d0c145796aecb6e54ea3-GHC_Driver_Make_hs.patch  b112546afa694efc0ae20d9d6c00b572a75c0239-GHC_Driver_Make_hs.patch
