cabal-version:       2.4
name:                ghc-lib-test-mini-compile
version:             0.1.0.0
synopsis:            Example code
license:             BSD-3-Clause
x-license:           BSD-3-Clause OR Apache-2.0
license-file:        LICENSE
author:              Shayne Fletcher (shayne@shaynefletcher.org)
maintainer:          Shayne Fletcher (shayne@shaynefletcher.org) & Digital Asset
copyright:           Digital Asset 2018-2023
build-type:          Simple
category:            Development
description:         "ghc-lib" usage example

extra-source-files:  test/*.hs
                   , extra-source-files/**/*.hs

executable ghc-lib-test-mini-compile
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >=4.11 && <5
                     , containers
                     , directory
                     , extra
                     , ghc-lib-parser
                     , ghc-lib
  hs-source-dirs:      src
  include-dirs:        extra-source-files
  if flag(daml-unit-ids)
      cpp-options: -DDAML_UNIT_IDS

flag daml-unit-ids
  description: If enabled, we use daml unit ids, e.g. daml-prim instead of ghc-prim
  manual: True
  default: False

test-suite ghc-lib-test-mini-compile-test
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  main-is:             Main.hs
  hs-source-dirs:      test
  build-depends:       base >=4.11 && <5
                     , directory
                     , extra
                     , filepath
                     , optparse-applicative
                     , tagged
                     , tasty
                     , tasty-hunit
                     , utf8-string
                     , ghc-lib-test-utils
