cabal-version:       2.0
name:                ghc-lib-test-mini-hlint
version:             0.1.0.0
synopsis:            Example code
license:             BSD3
x-license:           BSD3-Clause OR Apache-2.0
license-file:        LICENSE
author:              Shayne Fletcher (shayne@shaynefletcher.org)
maintainer:          Shayne Fletcher (shayne@shaynefletcher.org) & Digital Asset
copyright:           Digital Asset 2018-2022
build-type:          Simple
category:            Development
description:         "ghc-lib-parser" usage example

extra-source-files:  test/*.hs
                     test/*.expect

executable ghc-lib-test-mini-hlint
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >=4.11 && <5
                     , extra
                     , ghc-lib-parser
                     , containers
                     , uniplate
  hs-source-dirs:      src

test-suite ghc-lib-test-mini-hlint-test
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  main-is:             Main.hs
  hs-source-dirs:      test
  build-depends:       base >=4.11 && <5
                     , directory
                     , extra
                     , filepath
                     , optparse-applicative
                     , tagged
                     , tasty
                     , tasty-golden
                     , ghc-lib-test-utils
