cabal-version:       2.4
name:                ghc-lib-test-mini-hlint
version:             0.1.0.0
synopsis:            Example code
license:             BSD-3-Clause
x-license:           BSD-3-Clause OR Apache-2.0
license-file:        LICENSE
author:              Shayne Fletcher (shayne@shaynefletcher.org)
maintainer:          Shayne Fletcher (shayne@shaynefletcher.org) & Digital Asset
copyright:           Digital Asset 2018-2022
build-type:          Simple
category:            Development
description:         "ghc-lib-parser" usage example

extra-source-files:  test/*.hs
                   , extra-source-files/**/*.hs

executable ghc-lib-test-mini-hlint
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >=4.11 && <5
                     , extra
                     , ghc-lib-parser
                     , containers
                     , uniplate
  hs-source-dirs:      src
  include-dirs:        extra-source-files

test-suite ghc-lib-test-mini-hlint-test
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  main-is:             Main.hs
  hs-source-dirs:      test
  build-depends:       base >=4.11 && <5
                     , directory
                     , extra
                     , filepath
                     , optparse-applicative
                     , tagged
                     , tasty
                     , tasty-hunit
                     , utf8-string
                     , ghc-lib-test-utils
