cabal-version:       2.0
name:                ghc-lib-test-utils
version:             0.1.0.0
synopsis:            Test utitilities
license:             BSD3
x-license:           BSD-3-Clause OR Apache-2.0
license-file:        LICENSE
author:              Shayne Fletcher (shayne@shaynefletcher.org)
maintainer:          Shayne Fletcher (shayne@shaynefletcher.org) & Digital Asset
copyright:           Digital Asset 2021-2022
category:            Development
build-type:          Simple
description:         Code common to usage examples

library
  hs-source-dirs:    src
  default-language:  Haskell2010
  build-depends:     base >=4.11 && <5
                   , extra
                   , tasty
                   , utf8-string
  exposed-modules:   TestUtils
  other-modules:     Paths_ghc_lib_test_utils
  autogen-modules:   Paths_ghc_lib_test_utils
