name:                mini-compile
version:             0.1.0.0
license:             BSD3
x-license:           BSD3-Clause OR Apache-2.0
license-file:        ../../LICENSE
author:              Shayne Fletcher (shayne.fletcher@digitalasset.com)
maintainer:          Shayne Fletcher (shayne.fletcher@digitalasset.com)
copyright:           Digital Asset 2018-2019
build-type:          Simple
cabal-version:       >=1.10

executable mini-compile
  main-is:             Main.hs
  build-depends:       base >=4.11
                     , containers
                     , directory
                     , extra
                     , ghc-lib
  -- ghc-lib re-exports ghc-lib-parser so this shouldn't be necessary
  -- but >= ghc-9.0.2 seems broken in this respect.
  if impl(ghc >= 9.0.2) && impl  (ghc > 9.3)
    build-depends:     ghc-lib-parser

  default-language:    Haskell2010
  hs-source-dirs:      src
  if flag(daml-unit-ids)
      cpp-options: -DDAML_UNIT_IDS

flag daml-unit-ids
  description: If enabled, we use daml unit ids, e.g. daml-prim instead of ghc-prim
  manual: True
  default: False
