cabal-version:       2.0
name:                mini-compile
version:             0.1.0.0
synopsis:            Example code
license:             BSD3
x-license:           BSD3-Clause OR Apache-2.0
license-file:        LICENSE
author:              Shayne Fletcher (shayne@shaynefletcher.org)
maintainer:          Shayne Fletcher (shayne@shaynefletcher.org) & Digital Asset
copyright:           Digital Asset 2018-2022
build-type:          Simple
category:            Development
description:         "ghc-lib" usage example

extra-source-files:  test/*.hs

executable mini-compile
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >=4.11 && <5
                     , containers
                     , directory
                     , extra
                     , ghc-lib-parser
                     , ghc-lib
  hs-source-dirs:      src
  if flag(daml-unit-ids)
      cpp-options: -DDAML_UNIT_IDS

flag daml-unit-ids
  description: If enabled, we use daml unit ids, e.g. daml-prim instead of ghc-prim
  manual: True
  default: False
