name:                mini-hlint
version:             0.1.0.0
license:             BSD3
x-license:           BSD3-Clause OR Apache-2.0
license-file:        ../../LICENSE
author:              Shayne Fletcher (shayne@shaynefletcher.org)
maintainer:          Shayne Fletcher (shayne@shaynefletcher.org)
copyright:           Digital Asset 2018-2021
build-type:          Simple
cabal-version:       >=1.10

executable mini-hlint
  main-is:             Main.hs
  build-depends:       base >=4.11
                     , extra
                     , ghc-lib-parser
                     , containers
                     , uniplate
  default-language:    Haskell2010
  hs-source-dirs:      src

test-suite mini-hlint-test
  type: exitcode-stdio-1.0
  main-is:
      Main.hs
  hs-source-dirs:
      test
  build-depends:
      base >=4.7 && <5
    , directory
    , extra
    , filepath
    , optparse-applicative
    , tagged
    , tasty
    , tasty-golden
    , test-utils
